--- a/index.html
+++ b/index.html
@@ -3,38 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-
+    <title>calcul de moyenne</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="style.js"></script>
 </head>
-<body> <form><link rel="stylesheet" href="style.css">
-
-
-
-<header><h1> 𝖒𝖔𝖓 𝖕𝖔𝖗𝖙𝖋𝖔𝖑𝖎𝖔:</h1></header>
-<section>   <h1>𝖒𝖊𝖘 𝖙𝖕:</h1>
-<h2><a href="tpp0/index.html">VOIR MON TP1</a></h2>
-<h2><a href="tpp1/index.html">VOIR MON TP2</a></h2>
-<h2><a href="tp3/index.html">VOIR MON TP3</a></h2>
-<h2><a href="tp5/index.html">VOIR MON TP4</a></h2>
-<h2><a href="TPP2/index.html">VOIR MON TP5</a></h2>
-<h2><a href="TP7/tp7.html">VOIR MON TP6</a></h2>
-<h2><a href="tp9.pdf"> VOIR MON tp7</a></h2>
-<h2><a href="tp.js/index.html"> VOIR MON TP-JS</a></h2>
-<h2><a href="bootstrap1/index.html"> VOIR MON TP BOOTSTRAP</a></h2>
-<h2><a href="tpjs10/index.html">VOIR MON tp10</a></h2>
-</section> 
-<section><h1>𝖒𝖊𝖘 𝖒𝖎𝖘𝖘𝖎𝖔𝖓𝖘:</h1>
-<h2><a href="tp8/index.html">MESSION 1</a></h2></section>   
-</form>
-
-<footer>
-    <p>&copy;2025 BTS SIO MOHA DEROUICH </p>
-</footer>
-
-
-
-    
+<body><center>
+    <header><h1>calcul</h1></header>
+    <div class="history.back()"onclick="history.back()">
+<button onclick="calcul_moyenne()">calcul moyenne</button></div>
+<button onclick="calcul_temperatur()">Test de température</button>
+<button onclick="calcul_comparaison()">Comparaison de deux nombres</button></div>
+</center>
 </body>
 </html>
